--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
         </div> -->
         <div class="slider">
             
-            <li><a href="#"><img src="images/1.png" alt="image01"></a></li>
-            <li><a href="#"><img src="images/2.png" alt="image02"></a></li>
-            <li><a href="#"><img src="images/3.png" alt="image03"></a></li>
-            <li><a href="#"><img src="images/4.png" alt="image04"></a></li>
-            <li><a href="#"><img src="images/5.png" alt="image04"></a></li>
-            <li><a href="#"><img src="images/6.png" alt="image04"></a></li>
-            <li><a href="#"><img src="images/7.png" alt="image04"></a></li>
+            <li><img src="images/1.png" alt=""></li>
+            <li><img src="images/2.png" alt=""></li>
+            <li><img src="images/3.png" alt=""></li>
+            <li><img src="images/4.png" alt=""></li>
+            <li><img src="images/5.png" alt=""></li>
+            <li><img src="images/6.png" alt=""></li>
+            <li><img src="images/7.png" alt=""></li>
 
 
            
