--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
         </div> -->
         <div class="slider">
             
-            <li><img src="images/1.png" alt=""></li>
-            <li><img src="images/2.png" alt=""></li>
-            <li><img src="images/3.png" alt=""></li>
-            <li><img src="images/4.png" alt=""></li>
-            <li><img src="images/5.png" alt=""></li>
-            <li><img src="images/6.png" alt=""></li>
-            <li><img src="images/7.png" alt=""></li>
+            <li><img src="images/1.PNG" alt=""></li>
+            <li><img src="images/2.PNG" alt=""></li>
+            <li><img src="images/3.PNG" alt=""></li>
+            <li><img src="images/4.PNG" alt=""></li>
+            <li><img src="images/5.PNG" alt=""></li>
+            <li><img src="images/6.PNG" alt=""></li>
+            <li><img src="images/7.PNG" alt=""></li>
 
 
            
