--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img src="images/wade_back.png" alt="">
     </div>
     <div class="title">
-        <div><a href=""><img src="images/play.png" alt=""></a></div>
+        <div><a href="https://touhi5364.github.io/work2_play/"><img src="images/play.png" alt=""></a></div>
             <h2>WADE!! GAME</h2>
             <p>2020年芸工祭「wade!!」公式サイト</p>
             <p>のミニゲームとしてunityで制作した</p>
